--- a/composer.json
+++ b/composer.json
@@ -36,7 +36,9 @@
     ],
     "require": {
         "php": "^8.2",
+        "andreaselia/laravel-api-to-postman": "^1.3",
         "apiato/core": "^13.1",
+        "darkaonline/l5-swagger": "^9.0",
         "laravel/passport": "^13.0",
         "spatie/laravel-permission": "^6.0",
         "wikimedia/composer-merge-plugin": "^2.1"
